# shuffle

./: .gitignore  README.md  Setup.hs  changelog.md  shuffle.cabal  uuagc_options
src/: Shuffle.hs
src-main/: Main.hs
src/Distribution/Simple/: Shuffle.hs
src/UHC/: Shuffle.hs
src/UHC/Shuffle/: AspectExpr.ag  AspectExprAbsSyn.ag  AspectExprEval.ag  CDoc.ag  CDocCommon.hs  CDocInline.ag  CDocSubst.ag  ChunkParser.hs  Common.hs  MainAG.ag  Version.hs
test/: tst1
