Name:                shuffle
Version:             0.1.4.0
Copyright:           Utrecht University, Department of Information and Computing Sciences, Software Technology group
Description:         Shuffle tool used by UHC (Utrecht Haskell Compiler)
Synopsis:            Shuffle tool for UHC
Homepage:            https://github.com/UU-ComputerScience/shuffle
Bug-Reports:         https://github.com/UU-ComputerScience/shuffle/issues
License:             BSD3
License-file:        LICENSE
Author:              UHC Team
Maintainer:          uhc-developers@lists.science.uu.nl
Category:            Development
Build-Type:          Custom
Cabal-Version:       2.0
Extra-Source-Files:  uuagc_options,
                     changelog.md,
                     src/UHC/Shuffle/AspectExpr.ag,
                     src/UHC/Shuffle/AspectExprAbsSyn.ag,
                     src/UHC/Shuffle/AspectExprEval.ag,
                     src/UHC/Shuffle/CDoc.ag,
                     src/UHC/Shuffle/CDocAbsSyn.ag,
                     src/UHC/Shuffle/CDocCommonAG.ag,
                     src/UHC/Shuffle/CDocInline.ag,
                     src/UHC/Shuffle/CDocSubst.ag,
                     src/UHC/Shuffle/ChunkAbsSyn.ag,
                     src/UHC/Shuffle/MainAG.ag

Source-Repository head
  Type:              git
  Location:          https://github.com/UU-ComputerScience/shuffle.git

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

Library
  Hs-Source-Dirs:    src
  default-language:  Haskell2010
  default-extensions:RankNTypes, TypeSynonymInstances, FlexibleInstances, FlexibleContexts
  Exposed-Modules:   UHC.Shuffle,
                     UHC.Shuffle.Version,
                     Distribution.Simple.Shuffle
  Other-Modules:     UHC.Shuffle.AspectExpr,
                     UHC.Shuffle.AspectExprEval,
                     UHC.Shuffle.CDoc,
                     UHC.Shuffle.CDocCommon,
                     UHC.Shuffle.CDocInline,
                     UHC.Shuffle.CDocSubst,
                     UHC.Shuffle.ChunkParser,
                     UHC.Shuffle.Common,
                     UHC.Shuffle.MainAG
  autogen-modules:   UHC.Shuffle.AspectExpr,
                     UHC.Shuffle.AspectExprEval,
                     UHC.Shuffle.CDoc,
                     UHC.Shuffle.CDocInline,
                     UHC.Shuffle.CDocSubst,
                     UHC.Shuffle.MainAG
  Build-Depends:     base >= 4 && < 5,
                     containers >= 0.4,
                     directory >= 1.1,
                     process >= 1.1,
                     array >= 0.4,
                     uulib >= 0.9,
                     uuagc >= 0.9.40.3,
                     uuagc-cabal >= 1.2.0.0,
                     uhc-util >= 0.1.5.5,
                     Cabal >= 3.0.0.0,
                     parsec >= 3.1.13.0,
                     filepath >= 1.2
  if flag(network-uri)
    build-depends:   network-uri >= 2.6,
                     network >= 2.6
  else
    build-depends:   network >= 2.3 && < 2.6

Executable shuffle
  Hs-Source-Dirs:    src-main
  default-language:  Haskell2010
  Main-Is:           Main.hs
  Build-Depends:     base >= 4 && < 5,
                     shuffle

custom-setup
  setup-depends:     base >= 4 && < 5,
                     uuagc-cabal >= 1.2.0.0,
                     uuagc >= 0.9.40.3,
                     Cabal >= 3.0.0.0
